[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/UI/glassPanel_cornerTL.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/TileButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Objects/fonts/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UI/ui.gd" type="Script" id=5]
[ext_resource path="res://Objects/UI/coin_small.png" type="Texture" id=6]
[ext_resource path="res://Objects/UI/massiveMultiplayer.png" type="Texture" id=7]
[ext_resource path="res://Objects/Icons/Well.png" type="Texture" id=8]
[ext_resource path="res://Objects/Icons/Solar.png" type="Texture" id=9]
[ext_resource path="res://Objects/Icons/Plant.png" type="Texture" id=10]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 3 )

[node name="UI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="HBoxContainer" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
mouse_filter = 2

[node name="Left" type="MarginContainer" parent="Screen"]
margin_right = 174.0
margin_bottom = 900.0
custom_constants/margin_left = 10

[node name="Bar" type="CenterContainer" parent="Screen/Left"]
margin_left = 10.0
margin_right = 174.0
margin_bottom = 900.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="PanelContainer" parent="Screen/Left/Bar"]
margin_top = 143.0
margin_right = 164.0
margin_bottom = 757.0

[node name="Menu" type="VBoxContainer" parent="Screen/Left/Bar/Build"]
margin_left = 7.0
margin_top = 7.0
margin_right = 157.0
margin_bottom = 607.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House" parent="Screen/Left/Bar/Build/Menu" instance=ExtResource( 2 )]
group = SubResource( 1 )
tile_type = 2
cost = 200

[node name="Field" parent="Screen/Left/Bar/Build/Menu" instance=ExtResource( 2 )]
margin_top = 150.0
margin_bottom = 300.0
group = SubResource( 1 )
icon = ExtResource( 10 )
tile_type = 1
cost = 100

[node name="Solar" parent="Screen/Left/Bar/Build/Menu" instance=ExtResource( 2 )]
margin_top = 300.0
margin_bottom = 450.0
group = SubResource( 1 )
icon = ExtResource( 9 )
tile_type = 3
cost = 300
unlock_population = 75

[node name="Well" parent="Screen/Left/Bar/Build/Menu" instance=ExtResource( 2 )]
margin_top = 450.0
margin_bottom = 600.0
group = SubResource( 1 )
icon = ExtResource( 8 )
tile_type = 4
cost = 300
unlock_population = 100

[node name="Right" type="VSplitContainer" parent="Screen"]
margin_left = 178.0
margin_right = 1440.0
margin_bottom = 900.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="Screen/Right"]
margin_right = 1262.0
margin_bottom = 50.0
mouse_filter = 2
custom_constants/separation = 15
alignment = 2

[node name="ClockLabel" type="Label" parent="Screen/Right/TopBar"]
margin_left = 769.0
margin_top = 10.0
margin_right = 876.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "3 o'clock"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seperator" type="Label" parent="Screen/Right/TopBar"]
margin_left = 891.0
margin_top = 10.0
margin_right = 898.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "|"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayLabel" type="Label" parent="Screen/Right/TopBar"]
margin_left = 913.0
margin_top = 10.0
margin_right = 985.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "Day 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Screen/Right/TopBar"]
margin_left = 1000.0
margin_right = 1040.0
margin_bottom = 50.0

[node name="MoneyIcon" type="TextureRect" parent="Screen/Right/TopBar/CenterContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 45.0
texture = ExtResource( 6 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="Screen/Right/TopBar"]
margin_left = 1055.0
margin_top = 10.0
margin_right = 1119.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "0000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Screen/Right/TopBar"]
margin_left = 1134.0
margin_right = 1184.0
margin_bottom = 50.0

[node name="PeopleIcon" type="TextureRect" parent="Screen/Right/TopBar/CenterContainer2"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeopleLabel" type="Label" parent="Screen/Right/TopBar"]
margin_left = 1199.0
margin_top = 10.0
margin_right = 1247.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Screen/Right/TopBar"]
margin_left = 1262.0
margin_right = 1262.0
margin_bottom = 50.0

[node name="HSplitContainer" type="HSplitContainer" parent="Screen/Right"]
margin_top = 62.0
margin_right = 1262.0
margin_bottom = 900.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer_empty" type="CenterContainer" parent="Screen/Right/HSplitContainer"]
margin_right = 960.0
margin_bottom = 838.0
rect_min_size = Vector2( 600, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="Screen/Right/HSplitContainer"]
margin_left = 972.0
margin_right = 1262.0
margin_bottom = 838.0

[node name="CenterContainer" type="CenterContainer" parent="Screen/Right/HSplitContainer/VSplitContainer"]
margin_right = 290.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Screen/Right/HSplitContainer/VSplitContainer"]
margin_top = 628.0
margin_right = 290.0
margin_bottom = 838.0
custom_constants/margin_right = 10
custom_constants/margin_bottom = 10

[node name="NinePatchRect" type="NinePatchRect" parent="Screen/Right/HSplitContainer/VSplitContainer/MarginContainer"]
margin_right = 280.0
margin_bottom = 200.0
rect_min_size = Vector2( 280, 200 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 4
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Screen/Right/HSplitContainer/VSplitContainer/MarginContainer/NinePatchRect"]
margin_left = 10.0595
margin_top = 9.0
margin_right = 286.06
margin_bottom = 174.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 2 )
text = "Inhabitants: 10
Consumes 10 plants/s
Has power"
__meta__ = {
"_edit_use_anchors_": false
}
